// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contents loading from  Should load Websites 1`] = `
Array [
  Object {
    "fields": Object {
      "country_code": "FRA",
      "culture": "fr_FR",
      "domains": Array [
        "ekino.com",
      ],
      "enabled": true,
      "name": "Ekino",
      "order": 1,
      "path": "/",
    },
    "sys": Object {
      "contentType": Object {
        "sys": Object {
          "id": "rendr_website",
          "linkType": "ContentType",
          "type": "Link",
        },
      },
      "createdAt": "2019-08-21T11:00:42.276Z",
      "environment": Object {
        "sys": Object {
          "id": "master",
          "linkType": "Environment",
          "type": "Link",
        },
      },
      "id": "2g5lXpzZ0jPPwQViziSjtK",
      "locale": "en-US",
      "revision": 1,
      "space": Object {
        "sys": Object {
          "id": "f5bx295b472q",
          "linkType": "Space",
          "type": "Link",
        },
      },
      "type": "Entry",
      "updatedAt": "2019-08-21T11:00:42.276Z",
    },
  },
  Object {
    "fields": Object {
      "country_code": "GDB",
      "culture": "en_GB",
      "enabled": true,
      "name": "Ekino UK",
      "order": 2,
      "path": "/uk",
    },
    "sys": Object {
      "contentType": Object {
        "sys": Object {
          "id": "rendr_website",
          "linkType": "ContentType",
          "type": "Link",
        },
      },
      "createdAt": "2019-08-21T12:43:36.952Z",
      "environment": Object {
        "sys": Object {
          "id": "master",
          "linkType": "Environment",
          "type": "Link",
        },
      },
      "id": "632kl7enPots4PISSnD6DV",
      "locale": "en-US",
      "revision": 1,
      "space": Object {
        "sys": Object {
          "id": "f5bx295b472q",
          "linkType": "Space",
          "type": "Link",
        },
      },
      "type": "Entry",
      "updatedAt": "2019-08-21T12:43:36.952Z",
    },
  },
]
`;

exports[`Contents loading from  Should raise an exception as no page will be found 1`] = `[Error: Not Found Exception]`;

exports[`Contents loading from  Should return existing page  1`] = `
Object {
  "fields": Object {
    "path": "/",
    "seo_description": "/",
    "seo_keywords": "/",
    "title": "homepage",
    "website": Object {
      "fields": Object {
        "country_code": "GDB",
        "culture": "en_GB",
        "enabled": true,
        "name": "Ekino UK",
        "path": "/uk",
      },
      "sys": Object {
        "contentType": Object {
          "sys": Object {
            "id": "rendr_website",
            "linkType": "ContentType",
            "type": "Link",
          },
        },
        "createdAt": "2019-08-21T12:43:36.952Z",
        "environment": Object {
          "sys": Object {
            "id": "master",
            "linkType": "Environment",
            "type": "Link",
          },
        },
        "id": "632kl7enPots4PISSnD6DV",
        "locale": "en-US",
        "revision": 1,
        "space": Object {
          "sys": Object {
            "id": "f5bx295b472q",
            "linkType": "Space",
            "type": "Link",
          },
        },
        "type": "Entry",
        "updatedAt": "2019-08-21T12:43:36.952Z",
      },
    },
  },
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "id": "rendr_page",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "createdAt": "2019-08-21T15:43:17.711Z",
    "environment": Object {
      "sys": Object {
        "id": "master",
        "linkType": "Environment",
        "type": "Link",
      },
    },
    "id": "28dAkVDQuMmGBAX7IEOJDd",
    "locale": "en-US",
    "revision": 2,
    "space": Object {
      "sys": Object {
        "id": "f5bx295b472q",
        "linkType": "Space",
        "type": "Link",
      },
    },
    "type": "Entry",
    "updatedAt": "2019-08-21T15:43:44.995Z",
  },
}
`;

exports[`Contents loading from  Should return existing website  1`] = `
Object {
  "fields": Object {
    "country_code": "FRA",
    "culture": "fr_FR",
    "domains": Array [
      "ekino.com",
    ],
    "enabled": true,
    "name": "Ekino",
    "order": 1,
    "path": "/",
  },
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "id": "rendr_website",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "createdAt": "2019-08-21T11:00:42.276Z",
    "environment": Object {
      "sys": Object {
        "id": "master",
        "linkType": "Environment",
        "type": "Link",
      },
    },
    "id": "2g5lXpzZ0jPPwQViziSjtK",
    "locale": "en-US",
    "revision": 1,
    "space": Object {
      "sys": Object {
        "id": "f5bx295b472q",
        "linkType": "Space",
        "type": "Link",
      },
    },
    "type": "Entry",
    "updatedAt": "2019-08-21T11:00:42.276Z",
  },
}
`;

exports[`Contents loading from  Should return non existing website  1`] = `[Error: Not Found Exception]`;

exports[`Contents loading from  should return an Author 1`] = `
Object {
  "fields": Object {
    "biography": "Just a guy...",
    "image": Object {
      "fields": Object {
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 1023,
              "width": 969,
            },
            "size": 247335,
          },
          "fileName": "DSCF2267.jpg",
          "url": "//images.ctfassets.net/f5bx295b472q/2pSrRlUsweaxu4tW7w1uVv/dd3e01d59c68d8b07101ddf953a120f7/DSCF2267.jpg",
        },
        "title": "Thomas Rabaix's Picture",
      },
      "sys": Object {
        "createdAt": "2019-08-21T10:59:57.177Z",
        "environment": Object {
          "sys": Object {
            "id": "master",
            "linkType": "Environment",
            "type": "Link",
          },
        },
        "id": "2pSrRlUsweaxu4tW7w1uVv",
        "locale": "en-US",
        "revision": 1,
        "space": Object {
          "sys": Object {
            "id": "f5bx295b472q",
            "linkType": "Space",
            "type": "Link",
          },
        },
        "type": "Asset",
        "updatedAt": "2019-08-21T10:59:57.177Z",
      },
    },
    "job_title": "CTO London",
    "name": "Thomas Rabaix",
    "slug": "thomas-rabaix",
    "social_twitter": "th0masr",
  },
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "id": "rendr_author",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "createdAt": "2019-08-21T11:00:16.201Z",
    "environment": Object {
      "sys": Object {
        "id": "master",
        "linkType": "Environment",
        "type": "Link",
      },
    },
    "id": "4JSAPT1jf0J8XJa0cg1aCa",
    "locale": "en-US",
    "revision": 1,
    "space": Object {
      "sys": Object {
        "id": "f5bx295b472q",
        "linkType": "Space",
        "type": "Link",
      },
    },
    "type": "Entry",
    "updatedAt": "2019-08-21T11:00:16.201Z",
  },
}
`;

exports[`Contents loading from  should return an article 1`] = `
Object {
  "fields": Object {
    "abstract": "The challenge of using a Headless CMS but still want to control how the template is managed",
    "authors": Array [
      Object {
        "fields": Object {
          "biography": "Just a guy...",
          "image": Object {
            "fields": Object {
              "file": Object {
                "contentType": "image/jpeg",
                "details": Object {
                  "image": Object {
                    "height": 1023,
                    "width": 969,
                  },
                  "size": 247335,
                },
                "fileName": "DSCF2267.jpg",
                "url": "//images.ctfassets.net/f5bx295b472q/2pSrRlUsweaxu4tW7w1uVv/dd3e01d59c68d8b07101ddf953a120f7/DSCF2267.jpg",
              },
              "title": "Thomas Rabaix's Picture",
            },
            "sys": Object {
              "createdAt": "2019-08-21T10:59:57.177Z",
              "environment": Object {
                "sys": Object {
                  "id": "master",
                  "linkType": "Environment",
                  "type": "Link",
                },
              },
              "id": "2pSrRlUsweaxu4tW7w1uVv",
              "locale": "en-US",
              "revision": 1,
              "space": Object {
                "sys": Object {
                  "id": "f5bx295b472q",
                  "linkType": "Space",
                  "type": "Link",
                },
              },
              "type": "Asset",
              "updatedAt": "2019-08-21T10:59:57.177Z",
            },
          },
          "job_title": "CTO London",
          "name": "Thomas Rabaix",
          "slug": "thomas-rabaix",
          "social_twitter": "th0masr",
        },
        "sys": Object {
          "contentType": Object {
            "sys": Object {
              "id": "rendr_author",
              "linkType": "ContentType",
              "type": "Link",
            },
          },
          "createdAt": "2019-08-21T11:00:16.201Z",
          "environment": Object {
            "sys": Object {
              "id": "master",
              "linkType": "Environment",
              "type": "Link",
            },
          },
          "id": "4JSAPT1jf0J8XJa0cg1aCa",
          "locale": "en-US",
          "revision": 1,
          "space": Object {
            "sys": Object {
              "id": "f5bx295b472q",
              "linkType": "Space",
              "type": "Link",
            },
          },
          "type": "Entry",
          "updatedAt": "2019-08-21T11:00:16.201Z",
        },
      },
    ],
    "blocks": Array [
      Object {
        "fields": Object {
          "container": "header",
          "contents": "The article contents with the markdown format! ",
          "internal_title": "The main contents",
        },
        "sys": Object {
          "contentType": Object {
            "sys": Object {
              "id": "rendr_block_text",
              "linkType": "ContentType",
              "type": "Link",
            },
          },
          "createdAt": "2019-08-21T10:58:31.192Z",
          "environment": Object {
            "sys": Object {
              "id": "master",
              "linkType": "Environment",
              "type": "Link",
            },
          },
          "id": "57UPFciwX1EEPgkZNh0gXn",
          "locale": "en-US",
          "revision": 1,
          "space": Object {
            "sys": Object {
              "id": "f5bx295b472q",
              "linkType": "Space",
              "type": "Link",
            },
          },
          "type": "Entry",
          "updatedAt": "2019-08-21T10:58:31.192Z",
        },
      },
      Object {
        "fields": Object {
          "container": "header",
          "contents": "The second part of the journey",
          "internal_title": "The second block",
        },
        "sys": Object {
          "contentType": Object {
            "sys": Object {
              "id": "rendr_block_text",
              "linkType": "ContentType",
              "type": "Link",
            },
          },
          "createdAt": "2019-08-21T11:04:53.316Z",
          "environment": Object {
            "sys": Object {
              "id": "master",
              "linkType": "Environment",
              "type": "Link",
            },
          },
          "id": "3CxKOYXVpLCPCwNCXGdn4N",
          "locale": "en-US",
          "revision": 1,
          "space": Object {
            "sys": Object {
              "id": "f5bx295b472q",
              "linkType": "Space",
              "type": "Link",
            },
          },
          "type": "Entry",
          "updatedAt": "2019-08-21T11:04:53.316Z",
        },
      },
    ],
    "image_header": Object {
      "fields": Object {
        "file": Object {
          "contentType": "image/png",
          "details": Object {
            "image": Object {
              "height": 782,
              "width": 2646,
            },
            "size": 1426695,
          },
          "fileName": "Screenshot 2019-08-21 at 12.02.06.png",
          "url": "//images.ctfassets.net/f5bx295b472q/5vV7exdcps9vwi2I1XEFfP/da39b569566d118b2711f8e5ec210c76/Screenshot_2019-08-21_at_12.02.06.png",
        },
        "title": "Header image",
      },
      "sys": Object {
        "createdAt": "2019-08-21T11:03:21.588Z",
        "environment": Object {
          "sys": Object {
            "id": "master",
            "linkType": "Environment",
            "type": "Link",
          },
        },
        "id": "5vV7exdcps9vwi2I1XEFfP",
        "locale": "en-US",
        "revision": 1,
        "space": Object {
          "sys": Object {
            "id": "f5bx295b472q",
            "linkType": "Space",
            "type": "Link",
          },
        },
        "type": "Asset",
        "updatedAt": "2019-08-21T11:03:21.588Z",
      },
    },
    "image_list": Object {
      "fields": Object {
        "file": Object {
          "contentType": "image/png",
          "details": Object {
            "image": Object {
              "height": 624,
              "width": 1198,
            },
            "size": 463423,
          },
          "fileName": "Screenshot 2019-08-21 at 12.02.00.png",
          "url": "//images.ctfassets.net/f5bx295b472q/4BRlYkVTQwQBcGb2Gft8Nb/700ef1992bd71efbe6ce42f6741a1ca2/Screenshot_2019-08-21_at_12.02.00.png",
        },
        "title": "Main image",
      },
      "sys": Object {
        "createdAt": "2019-08-21T11:02:44.877Z",
        "environment": Object {
          "sys": Object {
            "id": "master",
            "linkType": "Environment",
            "type": "Link",
          },
        },
        "id": "4BRlYkVTQwQBcGb2Gft8Nb",
        "locale": "en-US",
        "revision": 2,
        "space": Object {
          "sys": Object {
            "id": "f5bx295b472q",
            "linkType": "Space",
            "type": "Link",
          },
        },
        "type": "Asset",
        "updatedAt": "2019-08-21T11:04:02.200Z",
      },
    },
    "published_at": "2019-08-15T00:00",
    "seo_description": "The description",
    "seo_keywords": "The keywords",
    "slug": "headless-cms-challenge",
    "title": "Headless CMS challenge",
    "website": Object {
      "fields": Object {
        "country_code": "FRA",
        "culture": "fr_FR",
        "domains": Array [
          "ekino.com",
        ],
        "enabled": true,
        "name": "Ekino",
        "path": "/",
      },
      "sys": Object {
        "contentType": Object {
          "sys": Object {
            "id": "rendr_website",
            "linkType": "ContentType",
            "type": "Link",
          },
        },
        "createdAt": "2019-08-21T11:00:42.276Z",
        "environment": Object {
          "sys": Object {
            "id": "master",
            "linkType": "Environment",
            "type": "Link",
          },
        },
        "id": "2g5lXpzZ0jPPwQViziSjtK",
        "locale": "en-US",
        "revision": 1,
        "space": Object {
          "sys": Object {
            "id": "f5bx295b472q",
            "linkType": "Space",
            "type": "Link",
          },
        },
        "type": "Entry",
        "updatedAt": "2019-08-21T11:00:42.276Z",
      },
    },
  },
  "sys": Object {
    "contentType": Object {
      "sys": Object {
        "id": "rendr_article",
        "linkType": "ContentType",
        "type": "Link",
      },
    },
    "createdAt": "2019-08-21T11:04:56.829Z",
    "environment": Object {
      "sys": Object {
        "id": "master",
        "linkType": "Environment",
        "type": "Link",
      },
    },
    "id": "4yrf1lgxv3VY8K1jpjkog0",
    "locale": "en-US",
    "revision": 1,
    "space": Object {
      "sys": Object {
        "id": "f5bx295b472q",
        "linkType": "Space",
        "type": "Link",
      },
    },
    "type": "Entry",
    "updatedAt": "2019-08-21T11:04:56.829Z",
  },
}
`;

exports[`Contents loading from  should return an error with Author (duplicate slug) 1`] = `[Error: Not Found Exception]`;
